--- a/sitemap.html
+++ b/sitemap.html
@@ -53,15 +53,16 @@
       <div class="row">
         <div class="col-12">
           <div class="ism-header__main_box">
-            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo" href="https://www.meity.gov.in/"
-                target="_blank"><img alt="Miety logo" class="img-fluid" src="images/header/meity_header_logo.png"> </a>
+            <div class="ism-header__main_box text-left"><a aria-label="Miety logo" class="miety-logo"
+                href="https://www.meity.gov.in/" target="_blank"><img alt="Miety logo" class="img-fluid"
+                  src="images/header/meity_header_logo.png"> </a>
             </div>
-            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo" href="/index.html"
-                target="_blank"><img alt="Digital india logo" class="img-fluid"
+            <div class="ism-header__main_box text-center"><a aria-label="Miety logo" class="miety-logo"
+                href="/index.html" target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/ism_header_logo.png"></a>
             </div>
-            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo" href="https://dic.gov.in/"
-                target="_blank"><img alt="Digital india logo" class="img-fluid"
+            <div class="ism-header__main_box text-right"><a aria-label="Miety logo" class="miety-logo"
+                href="https://dic.gov.in/" target="_blank"><img alt="Digital india logo" class="img-fluid"
                   src="images/header/digi_india_header_logo.png"></a>
             </div>
           </div>
@@ -175,14 +176,13 @@
             <div class="ism-sitemap__info_head">About Us</div>
 
             <div class="ism-sitemap__info_content">
-              <!--<a class="ism-sitemap__info_item" href="/#">Our Ministers</a>--><!-- <a class="ism-sitemap__info_item" href="/our-ministers-state">Our Ministers of State</a> --><a
-                class="ism-sitemap__info_item" href="#">About ISM</a> <a class="ism-sitemap__info_item" href="#">About
-                SemiconIndia Programme</a> <a class="ism-sitemap__info_item" href="#n">ISM Vision & Objectives</a>  <a class="ism-sitemap__info_item"
-                href="#">ISM Team</a> <a class="ism-sitemap__info_item" href="#">Advisory
-                Committee</a><a class="ism-sitemap__info_item" href="#">Ism Committee</a><a
-                class="ism-sitemap__info_item" href="#">Tenders</a><a class="ism-sitemap__info_item"
-                href="#">Notifications</a> <a class="ism-sitemap__info_item"
-                href="#">Useful Links</a></div>
+              <a class="ism-sitemap__info_item" href="#">Our Ministers</a><!-- <a class="ism-sitemap__info_item" href="/our-ministers-state">Our Ministers of State</a> --><a
+                class="ism-sitemap__info_item" href="about-us.html">About ISM</a><a class="ism-sitemap__info_item" href="/ism-vision.html">ISM Vision & Objectives</a> <a
+                class="ism-sitemap__info_item" href="/our-team.html">ISM Team</a> <a class="ism-sitemap__info_item" href="/advisory-commitee.html">Advisory
+                Committee</a><a class="ism-sitemap__info_item" href="/ism-commitee.html">Ism Committee</a><a
+                class="ism-sitemap__info_item" href="/tenders.html">Tenders</a><a class="ism-sitemap__info_item"
+                href="#">Notifications</a> <a class="ism-sitemap__info_item" href="/useful-links.html">Useful Links</a>
+            </div>
           </div>
         </div>
 
@@ -190,9 +190,10 @@
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">SemiconIndia</div>
 
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">2024</a><a class="ism-sitemap__info_item" href="#">2023</a> <a
-                class="ism-sitemap__info_item" href="#">2022</a> <a class="ism-sitemap__info_item"
-                href="#">Workshop on MEITY-NSF</a> <a class="ism-sitemap__info_item"
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="/about-semicon.html">About
+              SemiconIndia Programme</a> <a class="ism-sitemap__info_item" href="#">2024</a><a
+                class="ism-sitemap__info_item" href="#">2023</a> <a class="ism-sitemap__info_item" href="#">2022</a> <a
+                class="ism-sitemap__info_item" href="#">Workshop on MEITY-NSF</a> <a class="ism-sitemap__info_item"
                 href="#">Semiconindia Conference 2023</a></div>
           </div>
           &nbsp;
@@ -214,9 +215,8 @@
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Schemes</div>
 
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item"
-                href="#">Semiconductor Fabs</a> <a class="ism-sitemap__info_item"
-                href="#">Display Fabs</a> <a class="ism-sitemap__info_item"
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">Semiconductor Fabs</a> <a
+                class="ism-sitemap__info_item" href="#">Display Fabs</a> <a class="ism-sitemap__info_item"
                 href="#">Compound Semiconductors / Silicon Photonics / Sensors Fab / Discrete
                 Semiconductors Fab And Semiconductor ATMP/OSAT Facilities</a> <a class="ism-sitemap__info_item"
                 href="#">Design Linked Incentive</a></div>
@@ -227,16 +227,16 @@
           <div class="ism-sitemap__info">
             <div class="ism-sitemap__info_head">Quick Links</div>
 
-            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="#">Events</a> <a
-                class="ism-sitemap__info_item" href="#">Downloads</a> <a class="ism-sitemap__info_item"
-                href="#">Gallery</a><a class="ism-sitemap__info_item" href="#">Gallery July
-                2023</a><a class="ism-sitemap__info_item" href="#">Gallery Feb 2023</a><a
-                class="ism-sitemap__info_item" href="#">Gallery April 2022</a><a
-                class="ism-sitemap__info_item" href="#">Contact Us</a><a class="ism-sitemap__info_item"
-                href="#">Reach Us</a><a class="ism-sitemap__info_item" href="#">Career</a> <a
-                class="ism-sitemap__info_item" href="#">FAQ’s</a> <a class="ism-sitemap__info_item"
-                href="#">Website Policies</a> <a class="ism-sitemap__info_item"
-                href="#">Privacy Policies</a></div>
+            <div class="ism-sitemap__info_content"><a class="ism-sitemap__info_item" href="/events.html">Events</a> <a
+                class="ism-sitemap__info_item" href="/downloads.html">Downloads</a> <a class="ism-sitemap__info_item"
+                href="#">Gallery</a><a class="ism-sitemap__info_item" href="/gallery-details.html">Gallery July
+                2023</a><a class="ism-sitemap__info_item" href="/gallery-details.html">Gallery Feb 2023</a><a class="ism-sitemap__info_item"
+                href="/gallery-details.html">Gallery April 2022</a><a class="ism-sitemap__info_item" href="/contact-us.html">Contact Us</a><a
+                class="ism-sitemap__info_item" href="/contact-us.html">Reach Us</a><a class="ism-sitemap__info_item"
+                href="/career.html">Career</a> <a class="ism-sitemap__info_item" href="/faqs.html">FAQ’s</a> <a
+                class="ism-sitemap__info_item" href="/website-policies.html">Website Policies</a>
+                <a class="ism-sitemap__info_item"
+                href="/privacy-policies.html">Privacy Policies</a></div>
           </div>
         </div>
       </div>
@@ -246,12 +246,12 @@
   <footer class="ism-footer">
     <div class=" ism-footer-inner-box">
       <div class="ism-footer-logo ism-footer-box-size">
-        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Ism_footer_logo.png" alt=""
-            width="70%"></a>
-        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/meity_footer_logo.png" alt=""
-            width="55%"></a>
-        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid" src="images/footer/Digi_india_footer_logo.png"
-            alt="" width="55%;"></a>
+        <a href="/index.html" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/Ism_footer_logo.png" alt="" width="70%"></a>
+        <a href="https://www.meity.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/meity_footer_logo.png" alt="" width="55%"></a>
+        <a href="https://dic.gov.in/" class="ism-footer-logo-link"><img class="img-fluid"
+            src="images/footer/Digi_india_footer_logo.png" alt="" width="55%;"></a>
       </div>
       <div class="vl"></div>
       <div class="ism-footer-useful ism-footer-box-size">
@@ -259,8 +259,10 @@
           <h5 class="mb-5">Useful Links</h5>
           <ul>
             <li><a href="sitemap.html"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
-            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
-            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
+            <li><a href="website-policies.html"><img src="images/footer/website_policy_icon.png" alt="">Website
+                Policies</a></li>
+            <li><a href="/privacy-policies.html"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy
+                Policies</a></li>
             <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="/faqs.html"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
